--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ concurrency: # Prevent two instances of this running at once
   group: deploy-to-ghpages
   cancel-in-progress: true
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,6 +30,7 @@ jobs:
         run: "npm run build"
 
   deploy:
+    needs: ["build"]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
